--- a/gameindex.html
+++ b/gameindex.html
@@ -57,7 +57,7 @@
     </div>
 
 
-    <script src="../game/assets/javascript/game.js" type="text/javascript"></script>
+    <script src="assets/javascript/game.js" type="text/javascript"></script>
 
 
 
